# simple-http-server-client

./: CMakeLists.txt  README.md  client  client.cpp  client.h  client_callback.cpp  client_callback.h  client_requests.cpp  client_requests.h  dummy_client.cpp  filesys.cpp  filesys.h  parser.cpp  parser.h  server  server.cpp  server.h  util.h  working_thread.cpp  working_thread.h
http/: request.cpp  request.h  response.cpp  response.h
